'ScheduleController' 생성 및 기타 JavaDoc 작성, 일부 오류 수정
- 'ScheduleController'을 생성하였습니다.
- 'Schedule', 'ScheduleData', 'ScheduleService' JavaDoc을 수정, 작성하였습니다.
- 일부 메서드에서 잘못 기입된 Data 를 수정하였습니다.
- `application.yml`을 추가하였습니다.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
 
     // Spring Security
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // Spring REST Docs
     asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
@@ -85,7 +85,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'com.codesoom.assignment.App'
+    mainClass = 'com.codesoom.scheduleMaker.App'
 }
 
 tasks.named('test') {
