--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -5,9 +5,17 @@ spring:
     hibernate:
       ddl-auto: update
 
+  devtools:
+    livereload:
+      enabled: true
+
+  freemaker:
+    cache: false
+
 jwt:
   secret: "FlyingFishermanScheduleMakerCode"
 
+spring.devtools.livereload.enabled: true
 ---
 
 spring:
