--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/react-router-dom": "^5.1.8",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.1.2"
   },
+  "type": "module",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
