--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,26 +1,31 @@
 spring:
   datasource:
+    url: jdbc:mariadb://localhost:3306/ScheduleMaker
+    username: root
+    password: ghdud1230
+
+jwt:
+  secret: "FlyingFishermanScheduleMakerCode"
+
+---
+
+spring:
+  profiles: develop
+  datasource:
     url: jdbc:h2:~/data/demo
-  jpa:
-    hibernate:
-      ddl-auto: update
 
   devtools:
     livereload:
       enabled: true
 
-  freemaker:
-    cache: false
+  jpa:
+    hibernate:
+      ddl-auto: update
+
+    freemaker:
+      cache: false
 
 jwt:
   secret: "FlyingFishermanScheduleMakerCode"
 
 spring.devtools.livereload.enabled: true
----
-
-spring:
-  profiles: mariadb
-  datasource:
-    url: jdbc:mariadb://localhost:3306/ScheduleMaker
-    username: root
-    password: ghdud1230
