자동 Header 생성 및 Intercept, 일부 백엔드 조정
- 로그인 여부에 따른 메인 페이지 표시를 변경했습니다.
- 자동적으로 `Request`를 Intercept하여 Header을 조정합니다.
- 비밀번호 지정 시 허용 범위에 대해 조정하였습니다

- 권한 확인 시 잘못된 방식인 부분을 수정하였습니다.

- 테스트 구동 시 DB 접속 설정을 수정하였습니다.

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -12,8 +12,14 @@ jwt:
 
 spring:
   profiles: develop
+  h2:
+    console:
+      enabled: true
   datasource:
-    url: jdbc:h2:~/data/demo
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:~/data/ScheduleMaker
+    username: sa
+    password:
 
   devtools:
     livereload:
@@ -22,14 +28,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-
-    freemaker:
-      cache: false
-
 jwt:
   secret: "FlyingFishermanScheduleMakerCode"
-
 spring.devtools.livereload.enabled: true
+
 ---
 
 spring:
@@ -41,6 +43,7 @@ spring:
     password: ghdud1230
 
 ---
+
 spring:
   profiles: local
   datasource:
